After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 755825 - Incorrect icon used for new tab button
Incorrect icon used for new tab button
Status: RESOLVED FIXED
Product: gnome-terminal
Classification: Core
Component: general
3.18.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Terminal Maintainers
GNOME Terminal Maintainers
: 756287 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-09-30 03:15 UTC by Michael Catanzaro
Modified: 2016-01-10 15:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot of icon problem (760.91 KB, image/png)
2015-09-30 03:16 UTC, Michael Catanzaro
  Details
window: Use a symbolic new tab icon (1.02 KB, patch)
2015-09-30 04:44 UTC, Michael Catanzaro
none Details | Review
Screenshot using corrected icon (596.38 KB, image/png)
2015-10-01 15:45 UTC, Michael Catanzaro
  Details

Description Michael Catanzaro 2015-09-30 03:15:08 UTC
Terminal 3.18 has a New Tab icon packed into the end of its GtkNotebook. This (along with the tab list) is really great; I wish those were in upstream GtkNotebook.

Anyway, the bug is that a color icon when it should be a symbolic icon.
Comment 1 Michael Catanzaro 2015-09-30 03:16:01 UTC
Created attachment 312387 [details]
Screenshot of icon problem
Comment 2 Michael Catanzaro 2015-09-30 04:44:05 UTC
Created attachment 312393 [details] [review]
window: Use a symbolic new tab icon

https://developer.gnome.org/hig/3.18/icons-and-artwork.html.en
Comment 3 Christian Persch 2015-09-30 19:18:46 UTC
Hmm. I didn't use a symbolic variant since I modelled this on how firefox's tab bar looks like.
Comment 4 Michael Catanzaro 2015-09-30 21:27:03 UTC
If Firefox was a GNOME app, I would file a bug against it too. :) There are guidelines under the heading "Color vs. symbolic icons" in the link above.
Comment 5 Michael Catanzaro 2015-10-01 15:45:24 UTC
Created attachment 312501 [details]
Screenshot using corrected icon
Comment 6 Debarshi Ray 2015-10-09 13:57:53 UTC
*** Bug 756287 has been marked as a duplicate of this bug. ***
Comment 7 Michael Catanzaro 2015-11-13 18:38:22 UTC
Hi, are you planning to accept this? Seems silly to add such a small fix to the list of shared patches that downstreams are starting to accumulate for gnome-terminal....
Comment 8 Christian Persch 2015-11-13 18:43:17 UTC
Well, I guess I was waiting for an explanation of why it's a good idea to use a different icon for this than the most-used desktop app this is modelled on (firefox) :-)
Comment 9 Christian Persch 2015-11-13 18:54:36 UTC
Also, list-add-symbolic is barely visible since it's grey on slightly-lighter-grey of the notebook action area background…
Comment 10 Michael Catanzaro 2015-11-13 22:48:16 UTC
(In reply to Christian Persch from comment #8)
> Well, I guess I was waiting for an explanation of why it's a good idea to
> use a different icon for this than the most-used desktop app this is
> modelled on (firefox) :-)

Because the GNOME HIG prohibit use of color icons with only a few exceptions, see comment #2. A new tab icon is not an exception.

Firefox is not a GNOME app by any stretch of imagination, so I don't see how it's relevant at all.

(In reply to Christian Persch from comment #9)
> Also, list-add-symbolic is barely visible since it's grey on
> slightly-lighter-grey of the notebook action area background…

It's exactly the same color as the close buttons in the tabs. Probably we should not make those blue as well. :)
Comment 11 Christian Persch 2016-01-10 15:16:30 UTC
(In reply to Michael Catanzaro from comment #10)
> (In reply to Christian Persch from comment #8)
> > Well, I guess I was waiting for an explanation of why it's a good idea to
> > use a different icon for this than the most-used desktop app this is
> > modelled on (firefox) :-)
> 
> Because the GNOME HIG prohibit use of color icons with only a few
> exceptions, see comment #2. A new tab icon is not an exception.

I was asking for a _reason_, not a citation by chapter and verse...
 

Anyway, since I've changed this to new-tab-symbolic on master now, same as epiphany uses.