notebook: Use symbolic new-tab icon

https://bugzilla.gnome.org/show_bug.cgi?id=755825